@@ -112,7 +112,7 @@ static struct rerr {
  = extern size_t regerror(int, const regex_t *, char *, size_t);
  */
 /* ARGSUSED */
-size_t __stdcall
+size_t
 regerror(errcode, preg, errbuf, errbuf_size)
 int errcode;
 const regex_t *preg;
