@@ -53,7 +53,7 @@ static char sccsid[] = "@(#)regfree.c	8.3 (Berkeley) 3/20/94";
  - regfree - free everything
  = extern void regfree(regex_t *);
  */
-void __stdcall
+void
 regfree(preg)
 regex_t *preg;
 {
